fix layout issues

--- a/src/components/coin-list/coin-list.styles.css
+++ b/src/components/coin-list/coin-list.styles.css
@@ -5,10 +5,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .not-found {
+  width: 100%;
   color: #1e2024;
   font-size: 2rem;
   text-align: center;
